# PolyPlas

./: .gitignore  CorbelScript.py  CurvedBeamScript.py  HalfPortalFrameScript.py  LICENSE  PolyPlasScript.py  README.md  SerpentineDomainScript.py  environment.yml  pyproject.toml
src/polymesher/: PolyGeometryAndBCs.py  PolyMesher.py
src/polyplas/: MMA.py  PolyPlas.py  PolyPlasUtilities.py
src/polytop/: PolyFilter.py  PolyInterpolation.py  PolyProjection.py  PolyTopUtilities.py
tests/: conftest.py  test_filters.py  test_geometry.py  test_interpolation.py  test_mesher.py  test_polyplas.py  test_polyplas_utilities.py  test_projection.py
